# test-app-ssi

./: .gitignore  pyproject.toml
.github/workflows/: publish-conda.yml  tests.yml
conda/: meta.yaml
src/testapp/: cli.py
